Fixing how header is aligned for compatibility

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,6 +19,10 @@ body {
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
+    padding-top: 50px;
+    @include media-query($on-palm) {
+        padding-top: 55px;
+    }
 }
 
 /**
